# Book-my-show

Backend/: .coverage  pyproject.toml
Backend/apps/booking/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
Backend/apps/core/: constants.py
Backend/apps/movie/: admin.py  filters.py  models.py  serializers.py  tests.py  views.py
Backend/bookmyshow/: settings.py  urls.py
Frontend/: index.html  package.json  tsconfig.app.json  tsconfig.paths.json  vite.config.ts
Frontend/src/: index.tsx
Sriganesh-B-S-Bookmyshow-BE-main/: main.py  pyproject.toml
Sriganesh-B-S-Bookmyshow-BE-main/apps/core/: admin.py  constants.py  filters.py  models.py  serializers.py  urls.py  views.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/core/migrations/: 0001_initial.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/movie/: filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/movie/migrations/: 0001_initial.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/slot/: admin.py  models.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/slot/migrations/: 0001_initial.py  0002_initial.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/theater/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  urls.py  views.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/theater/migrations/: 0001_initial.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/user/: enums.py  models.py  urls.py  views.py
Sriganesh-B-S-Bookmyshow-BE-main/apps/user/migrations/: 0001_initial.py
Sriganesh-B-S-Bookmyshow-BE-main/bookmyshow/: asgi.py  settings.py  urls.py  wsgi.py
(+161 files in other folders)
