[project]
name = "bookmyshow-be"
version = "0.1.0"
description = "Movie booking application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.28",
    "django-environ>=0.11.2",
    "django-filter>=24.3",
    "django-phonenumber-field[phonenumbers]>=8.0.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.15.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
select=["E","F","I"]


[tool.ruff.lint.isort]
known-first-party=["bookmyshow"]
